# Pakkausalgoritmi

./: .coveragerc  .gitignore  .pylintrc  README.md  määrittelydokumentti.md  pyproject.toml  tasks.py
Dokumentaatio/: Viikkoraportti1.md  Viikkoraportti2.md  Viikkoraportti3.md  Viikkoraportti4.md  Viikkoraportti5.md  Viikkoraportti6.md  käyttöohje.md  määrittelydokumentti.md  testaus.md  toteutusdokumentti.md
src/: bit_conversion.py  custom_expections.py  index.py  min_heap.py
src/Huffman/: huffman_coding.py  huffman_decoding.py  huffman_encoding.py  huffman_node.py
src/Huffman/tests/: huffman_coding_test.py  test_file.txt
src/LZW/: lzw_coding.py  lzw_decoding.py  lzw_encoding.py
src/LZW/tests/: lzw_test.py
src/tests/: bit_conversion_test.py  min_heap_test.py
src/tests/huffman/: huffman_coding_test.py  test_file.txt
src/tests/lzw/: lzw_test.py  test_file.txt
